stopped timer jump

--- a/public/styles.css
+++ b/public/styles.css
@@ -273,7 +273,7 @@ h2{
   background: white;
   border-color: white;
   width: 80%;
-  margin: 10px auto;
+  margin: 10px auto 100px auto;
   font-size: 1em;
 }
 
